--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">💻</div>Diogo</div>
-            <div class="card-back">Informatiker, arbeit of zu Hause<br> Spacht: 🇸🇪 🇪🇸 <br> Lernt: Deutsch</div>
+            <div class="card-back">💻 Informatiker, arbeit of zu Hause<br> Spicht: 🇸🇪 🇪🇸 <br> Lernt: Deutsch</div>
           </div>
         </div>
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">🧬</div>Beaa</div>
-            <div class="card-back">Forscherin, Bioingenieurin<br>Sparche: 🇺🇸 🇵🇹 <br> Lernt: Deutsch</div>
+            <div class="card-back">👩‍🔬 Forscherin, Bioingenieurin<br>Spricht: 🇺🇸 🇵🇹 <br> Lernt: Deutsch</div>
           </div>
         </div>
       </div>
@@ -56,13 +56,13 @@
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">⚽</div>Diogo</div>
-            <div class="card-back">💖 - Jogging, Fußball <br> 🍖 Halb Zwei, Hard Rock</div>
+            <div class="card-back"> 🏃‍♂️ Jogging <br> 🎾 Spiele Tennis <br> 🕜 Halb Zwei, Hard Rock</div>
           </div>
         </div>
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">📚</div>Beaa</div>
-            <div class="card-back"> 💙 Liest und schwimmt gern</div>
+            <div class="card-back"> 📕 Lese <br> 🏊‍♀️ Schwimme gern</div>
           </div>
         </div>
       </div>
@@ -74,13 +74,13 @@
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">🍺</div>Diogo</div>
-            <div class="card-back"> 🍺 Schnitzel & Bier<br> Schweden = kalt ❄️</div>
+            <div class="card-back"> 🍺 Schnitzel und Bier <br> 🇸🇪 Schweden = kalt ❄️</div>
           </div>
         </div>
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">🍔</div>Beaa</div>
-            <div class="card-back">🍔 Hamburger & Wasser<br>Kalifornien = sonnig ☀️</div>
+            <div class="card-back">🍔 Hamburger und Wasser<br> 🇺🇸 Kalifornien = sonnig ☀️</div>
           </div>
         </div>
       </div>
@@ -92,13 +92,13 @@
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">💳</div>Diogo</div>
-            <div class="card-back">💸 Zahlt mit Karte<br>📅 Kaffee nächste Woche?</div>
+            <div class="card-back"> 💳 Mit Karte <br> 📅 Kaffee nächste Woche?</div>
           </div>
         </div>
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">☕</div>Beaa</div>
-            <div class="card-back">🧑Getrennt zahlen</div>
+            <div class="card-back">🧑 Getrennt </div>
           </div>
         </div>
       </div>
