--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="card" onclick="this.classList.toggle('flipped')">
           <div class="card-inner">
             <div class="card-front"><div class="icon">💳</div>Diogo</div>
-            <div class="card-back"> 💳 Mit Karte <br> 📅 Kaffee nächste Woche?</div>
+            <div class="card-back"> 💳 Mit Karte <br> 📅 Kaffee am Sonnstag?</div>
           </div>
         </div>
         <div class="card" onclick="this.classList.toggle('flipped')">
@@ -109,28 +109,28 @@
   <form id="quizForm" class="quiz-form">
     <div class="question">
       <label>1. Woher kommt Diogo ursprünglich? </label><br/>
-      <input type="checkbox" name="q1" value="Malmö" required> Malmö<br/>
+      <input type="checkbox" name="q1" value="Malmö" > Malmö<br/>
       <input type="checkbox" name="q1" value="Leuven"> Leuven<br/>
       <input type="checkbox" name="q1" value="Sunnyvale"> Sunnyvale<br/>
     </div>
 
     <div class="question">
       <label>2. Wie viele Sprachen spricht Beaa? </label><br/>
-      <input type="checkbox" name="q2" value="2" required> 2<br/>
+      <input type="checkbox" name="q2" value="2" > 2<br/>
       <input type="checkbox" name="q2" value="3"> 3<br/>
       <input type="checkbox" name="q2" value="4"> 4<br/>
     </div>
 
     <div class="question">
       <label>3. Was ist Diogos Haupthobby? </label><br/>
-      <input type="checkbox" name="q3" value="Jogging" required> Jogging<br/>
+      <input type="checkbox" name="q3" value="Jogging" > Jogging<br/>
       <input type="checkbox" name="q3" value="Schwimmen"> Schwimmen<br/>
       <input type="checkbox" name="q3" value="Lesen"> Lesen<br/>
     </div>
 
     <div class="question">
       <label>4. Was macht Beaa gerne in ihrer Freizeit? </label><br/>
-      <input type="checkbox" name="q4" value="Lesen" required> Lesen<br/>
+      <input type="checkbox" name="q4" value="Lesen" > Lesen<br/>
       <input type="checkbox" name="q4" value="Schwimmen"> Schwimmen<br/>
       <input type="checkbox" name="q4" value="Kochen"> Kochen<br/>
     </div>
